<resources>
    <string name="app_name">Hz</string>
    <string name="title_login">Hz – Sign In</string>
    <string name="hint_server_url">Server URL (e.g. http://192.161.1.1:8096)</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Sign In</string>
    <string name="error_empty_fields">Please fill in all fields</string>
    <string name="error_login_failed">Login failed. Check your server URL and credentials.</string>
    <string name="btn_get_code">Get code</string>
    <string name="btn_cancel_code">Cancel</string>
    <string name="quick_connect_hint">In a signed-in Jellyfin app, open your profile → Quick
        Connect and enter this code.</string>
    <string name="link_use_password">Sign in with a username and password</string>
    <string name="link_use_quick_connect">Use Quick Connect instead</string>
    <string name="quick_connect_url_required">Enter your server\'s URL</string>
    <string name="quick_connect_off">Quick Connect is off on this server. Sign in with your
        username and password.</string>
    <string name="quick_connect_expired">That code expired. Get a new code.</string>
    <string name="quick_connect_unreachable">Couldn\'t reach the server. Get a new code.</string>
    <string name="btn_sync_now">Sync Now</string>
    <string name="btn_stop_sync">Stop Sync</string>
    <string name="status_not_synced">Not synced yet</string>
    <string name="status_syncing">Syncing…</string>
    <string name="status_up_to_date">Up to date</string>
    <string name="status_sync_failed">Sync failed</string>
    <string name="notification_channel_name">Hz</string>
    <string name="notification_channel_desc">Syncing your library</string>
    <string name="notification_sync_title">Hz</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_sync_complete">Sync complete</string>
    <string name="notification_title">hz</string>
    <string name="notification_starting">Starting sync...</string>
    <string name="notification_syncing">Syncing...</string>
    <string name="notification_error">Error: %1$s</string>
    <string name="cd_back">Back</string>
    <string name="header_home">Home</string>
    <string name="cd_settings">Settings</string>
    <string name="home_library_building">Building your library…</string>
    <string name="home_library_unreadable">Can\'t read %1$s</string>
    <string name="btn_retry">Retry</string>
    <string name="home_albums">Albums</string>
    <string name="home_library_empty">No music found in %1$s.</string>
    <string name="home_album_artists">Album Artists</string>
    <string name="home_genres">Genres</string>
    <string name="home_songs">Songs</string>
    <string name="header_albums">Albums</string>
    <string name="albums_empty">No downloaded albums</string>
    <string name="album_not_downloaded">Album not downloaded</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="btn_play">Play</string>
    <string name="btn_shuffle">Shuffle</string>
    <string name="album_length_minutes">%1$d min</string>
    <string name="disc_heading">Disc %1$d</string>
    <plurals name="track_count">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <string name="header_album_artists">Album Artists</string>
    <string name="header_genres">Genres</string>
    <string name="header_songs">Songs</string>
    <string name="songs_empty">No downloaded songs</string>
    <string name="btn_shuffle_all">Shuffle all</string>
    <string name="group_not_downloaded">Not downloaded</string>
    <string name="group_all_songs">All songs</string>
    <string name="group_albums_label">Albums</string>
    <string name="list_length_hours">%1$d h</string>
    <string name="list_length_hours_minutes">%1$d h %2$d min</string>
    <plurals name="album_count">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="song_count">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="header_settings">Settings</string>
    <string name="server_connected">Connected</string>
    <string name="server_offline">Offline</string>
    <string name="status_sign_in_again">Sign in again</string>
    <string name="settings_sync_title">Sync</string>
    <plurals name="sync_songs_of">
        <item quantity="one">%1$s of %2$s song</item>
        <item quantity="other">%1$s of %2$s songs</item>
    </plurals>
    <plurals name="sync_books_of">
        <item quantity="one">%1$s of %2$s book</item>
        <item quantity="other">%1$s of %2$s books</item>
    </plurals>
    <plurals name="sync_items_of">
        <item quantity="one">%1$s of %2$s item</item>
        <item quantity="other">%1$s of %2$s items</item>
    </plurals>
    <string name="sync_counts_synced">%1$s synced</string>
    <string name="settings_sync_row_percent">%1$d%%</string>
    <string name="settings_section_what_to_sync">What to sync</string>
    <string name="settings_section_schedule_storage">Schedule and storage</string>
    <string name="settings_albums_title">Albums to Sync</string>
    <string name="settings_albums_summary">%1$d of %2$d albums selected</string>
    <string name="settings_loading">Loading...</string>
    <string name="settings_albums_failed">Couldn\'t load albums</string>
    <string name="settings_auto_sync_title">Auto-sync</string>
    <string name="settings_auto_sync_disabled">Disabled</string>
    <plurals name="settings_auto_sync_every">
        <item quantity="one">Every %d hour</item>
        <item quantity="other">Every %d hours</item>
    </plurals>
    <string name="status_offline">Lost connection to server</string>
    <string name="status_sync_stopped">Sync stopped</string>
    <string name="status_synced">Synced</string>
    <string name="sync_detail_offline">Please reconnect to sync.</string>
    <string name="sync_detail_sign_in_again">%1$s refused your sign-in. Your choices and files are kept.</string>
    <string name="sync_error">Sync error: %1$s</string>
    <string name="status_sync_incomplete">Sync incomplete</string>
    <plurals name="sync_incomplete_detail">
        <item quantity="one">%d item couldn\'t sync. It\'ll retry next sync.</item>
        <item quantity="other">%d items couldn\'t sync. They\'ll retry next sync.</item>
    </plurals>
    <string name="sync_incomplete_message">Sync incomplete: %1$s</string>
    <plurals name="sync_untagged_detail">
        <item quantity="one">%d file couldn\'t be tagged.</item>
        <item quantity="other">%d files couldn\'t be tagged.</item>
    </plurals>
    <string name="files_missing">Files missing. Rescan your library.</string>
    <string name="playback_unavailable">Playback unavailable</string>
    <string name="player_playing_from_album">Playing from album</string>
    <string name="player_output">Output</string>
    <string name="player_queue">Queue</string>
    <string name="queue_title">Queue</string>
    <string name="output_unavailable">The output switcher isn\'t available on this device</string>
    <string name="cd_close_player">Close player</string>
    <string name="cd_play">Play</string>
    <string name="cd_pause">Pause</string>
    <string name="cd_next">Next</string>
    <string name="cd_previous">Previous</string>
    <string name="cd_repeat">Repeat</string>
    <string name="cd_shuffle">Shuffle</string>
    <string name="home_playlists">Playlists</string>
    <string name="header_playlists">Playlists</string>
    <string name="playlists_empty">No synced playlists</string>
    <string name="playlists_empty_hint">Choose playlists to sync in Settings</string>
    <string name="settings_playlists_title">Playlists to Sync</string>
    <string name="settings_playlists_summary">%1$d of %2$d playlists selected</string>
    <string name="settings_change_selection">Tap to change selection</string>
    <string name="selection_title_playlists">Select Playlists to Sync</string>
    <string name="home_audio_books">Audio Books</string>
    <string name="header_audio_books">Audio Books</string>
    <string name="books_empty">No synced books</string>
    <string name="books_empty_hint">Choose books to sync in Settings</string>
    <string name="settings_books_title">Books to Sync</string>
    <string name="settings_books_summary">%1$d of %2$d books selected</string>
    <string name="selection_title_books">Select Books to Sync</string>
    <string name="unknown_author">Unknown Author</string>
    <string name="book_chapter_number">Chapter %1$d</string>
    <string name="book_time_left">%1$s left</string>
    <string name="book_not_started">Not started</string>
    <string name="book_finished">Finished</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_start_over">Start over</string>
    <plurals name="chapter_count">
        <item quantity="one">%d chapter</item>
        <item quantity="other">%d chapters</item>
    </plurals>
    <string name="player_playing_book">Playing book</string>
    <string name="player_chapters">Chapters</string>
    <string name="player_book_left">%1$s left in book</string>
    <string name="chapters_title">Chapters</string>
    <string name="speed_title">Playback speed</string>
    <string name="skip_back_label">−15</string>
    <string name="skip_forward_label">+30</string>
    <string name="cd_skip_back">Back 15 seconds</string>
    <string name="cd_skip_forward">Forward 30 seconds</string>
    <string name="cd_previous_chapter">Previous chapter</string>
    <string name="cd_next_chapter">Next chapter</string>
    <string name="cd_speed">Playback speed</string>
    <string name="settings_home_screen_title">Home screen</string>
    <string name="settings_home_screen_summary">%1$d of %2$d categories shown</string>
    <string name="header_home_screen">Home screen</string>
    <string name="home_screen_hint">At least one category stays on Home.</string>
    <string name="cd_drag_to_reorder">Drag to reorder</string>
    <string name="action_move_up">Move up</string>
    <string name="action_move_down">Move down</string>
    <string name="settings_appearance_title">Appearance</string>
    <string name="appearance_theme_title">Theme</string>
    <string name="appearance_mode_dark">Dark</string>
    <string name="appearance_mode_light">Light</string>
    <string name="appearance_mode_system">System</string>
    <string name="appearance_accent_title">Accent colour</string>
    <string name="appearance_accent_name">· %1$s</string>
    <string name="appearance_accent_green">Green</string>
    <string name="appearance_accent_blue">Blue</string>
    <string name="appearance_accent_purple">Purple</string>
    <string name="appearance_accent_pink">Pink</string>
    <string name="appearance_accent_red">Red</string>
    <string name="appearance_accent_selected">%1$s, selected</string>
    <string name="equaliser_title">Equaliser</string>
    <string name="equaliser_preset_flat">Flat</string>
    <string name="equaliser_preset_bass_boost">Bass boost</string>
    <string name="equaliser_preset_treble_boost">Treble boost</string>
    <string name="equaliser_preset_vocal">Vocal</string>
    <string name="equaliser_preset_rock">Rock</string>
    <string name="equaliser_preset_pop">Pop</string>
    <string name="equaliser_preset_jazz">Jazz</string>
    <string name="equaliser_preset_classical">Classical</string>
    <string name="equaliser_preset_spoken_word">Spoken word</string>
    <string name="equaliser_preset_custom">Custom</string>
    <string name="equaliser_preset_selected">%1$s, selected</string>
    <string name="equaliser_band_hz">%1$d Hz</string>
    <string name="equaliser_band_khz">%1$d kHz</string>
    <string name="equaliser_gain">%1$s dB</string>
    <string name="equaliser_summary_off">Off</string>
</resources>